fix body 2 cards spacing issue
originally, the text part did not have any width
limitations set.

the max-width has been set to keep the cards from
going single-lined character, making it hard to
read the context.

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,9 @@ button{
 
 .card-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex: 1;
+    gap: 50px;
 }
 
 .card{
@@ -125,6 +127,7 @@ button{
 
 .iamge-description{
     text-align: center;
+    max-width: 200px;
 }
 
 .card-img{
